# weight-tracker

./: .gitignore  Dockerfile  README.md  default.nix  flake.nix  pyproject.toml  shell.nix
tests/: conftest.py  test_args.py  test_database.py  test_schema.py  test_server.py
weight_tracker/: args.py  database.py  db.py  dependencies.py  handler.py  main.py  schema.py
weight_tracker/crud/: __init__.py  users.py
weight_tracker/routers/: records.py  users.py
weight_tracker/static/: index.html  main.js
